feat(exception): add new field (description) to BaseResponse